// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Historique/HistoriqueFiltres Avec Filtres 1`] = `
<div
  className="mb-8 pb-8 border-b border-b-gray-200"
  id="filtres-historique"
>
  <p
    className="mb-6 font-bold"
  >
    Filtrer l’historique des modifications par
  </p>
  <div
    className="grid sm:grid-cols-2 lg:grid-cols-4 gap-x-8 gap-y-6"
  >
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Membre
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <button
          aria-expanded={false}
          aria-label="ouvrir le menu"
          className="flex items-center w-full p-2 text-left text-sm"
          data-test="filtre-membre"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
          type="button"
        >
          <span
            className="mr-auto text-grey425 line-clamp-1"
          >
            Sélectionner des options
          </span>
          <span
            className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
          />
        </button>
      </div>
    </div>
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Type d'élément modifié
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <button
          aria-expanded={false}
          aria-label="ouvrir le menu"
          className="flex items-center w-full p-2 text-left text-sm"
          data-test="filtre-type"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
          type="button"
        >
          <span
            className="mr-auto flex line-clamp-1"
          >
            <span>
              Action : statut
            </span>
          </span>
          <span
            className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
          />
        </button>
      </div>
    </div>
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Date de début
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <input
          className="w-full p-2"
          onChange={[Function]}
          pattern="\\\\d{4}-\\\\d{2}-\\\\d{2}"
          type="date"
          value="2022-11-03"
        />
      </div>
    </div>
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Date de fin
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <input
          className="w-full p-2"
          data-test="filtre-end-date"
          onChange={[Function]}
          pattern="\\\\d{4}-\\\\d{2}-\\\\d{2}"
          type="date"
          value="2022-11-24"
        />
      </div>
    </div>
  </div>
  <div
    className="flex items-baseline gap-6 mt-8"
  >
    <span
      className="text-sm text-gray-400"
    >
      4
       résultat
      s
    </span>
    <button
      className="w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-base py-3 px-6"
      data-test="desactiver-les-filtres"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="ri-close-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-8 mb-0.5"
      />
      Désactiver tous les filtres
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/HistoriqueFiltres Defaut 1`] = `
<div
  className="mb-8 pb-8 border-b border-b-gray-200"
  id="filtres-historique"
>
  <p
    className="mb-6 font-bold"
  >
    Filtrer l’historique des modifications par
  </p>
  <div
    className="grid sm:grid-cols-2 lg:grid-cols-4 gap-x-8 gap-y-6"
  >
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Membre
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <button
          aria-expanded={false}
          aria-label="ouvrir le menu"
          className="flex items-center w-full p-2 text-left text-sm"
          data-test="filtre-membre"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
          type="button"
        >
          <span
            className="mr-auto text-grey425 line-clamp-1"
          >
            Sélectionner des options
          </span>
          <span
            className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
          />
        </button>
      </div>
    </div>
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Type d'élément modifié
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <button
          aria-expanded={false}
          aria-label="ouvrir le menu"
          className="flex items-center w-full p-2 text-left text-sm"
          data-test="filtre-type"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
          type="button"
        >
          <span
            className="mr-auto text-grey425 line-clamp-1"
          >
            Sélectionner des options
          </span>
          <span
            className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
          />
        </button>
      </div>
    </div>
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Date de début
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <input
          className="w-full p-2"
          onChange={[Function]}
          pattern="\\\\d{4}-\\\\d{2}-\\\\d{2}"
          type="date"
          value=""
        />
      </div>
    </div>
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Date de fin
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <input
          className="w-full p-2"
          data-test="filtre-end-date"
          onChange={[Function]}
          pattern="\\\\d{4}-\\\\d{2}-\\\\d{2}"
          type="date"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
